Update javaKnowledge.md
garbage collection 종류 추가